--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     </header>
     <section class="hero">
         <div class="container">
-            <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=800&q=80" alt="School Building" class="school-building">
+            <img src="Ali.jpg" alt="Ali" class="school-building">
+            <p>Name: <strong>Alier Abraham Garang</strong></p>
+            <p>Regestration Number: <strong>24/BSE/BU/R/0016</strong></p>
+            <P>Email: <strong>alieraliga@2000gmail.com</strong></P>
             <h2>Welcome to My School</h2>
             <p>Empowering students for a brighter future.</p>
             <a href="#" class="btn">Learn More</a>
